# chen-core-lib

./: CONTRIBUTING  Cargo.toml  LICENCE  README.md  TODO.md
.github/workflows/: rust.yml
crates/chen_core_fonts/: Cargo.toml  LICENCE  README.md
crates/chen_core_fonts/src/: basic_font.rs  lib.rs
src/: buffer.rs  builtins.rs  event.rs  gui_screen.rs  lib.rs  position.rs  render.rs  screen.rs  utils.rs
src/builtins/: buffer.rs  geometry.rs  mod.rs  pixel_buffer.rs  position.rs  size.rs  sprite.rs  udim.rs  vector.rs
