[package]
name = "chen_core_lib"
version = "0.1.0"
edition = "2024"
description = "Assets for terminal like games."
repositiory = "https://github.com/antiMRS/chenCore"
authors = ["antiMRS"]

[dependencies]
num-traits = "0.2.19"
chen_core_fonts = { path ="crates/chen_core_fonts" }

[target.'cfg(windows)'.dependencies]
minifb = "0.28.0"

[features]
default = ["use_gui", "colored", "terminal_color_rgb", "background"]
colored = []
styled = []
background = ["colored"]
terminal_color_cubes = []
terminal_color_rgb = []
terminal_color_legacy = []
use_gui = ["colored"]