[package]
name = "chen_core_lib"
version = "0.2.0"
edition = "2024"
description = "Assets for terminal like games."
repository = "https://github.com/antiMRS/chen-core-lib/"
authors = ["antiMRS"]
readme = "README.md"
license = "MIT"
keywords = ["gamedev", "terminal", "graphics", "windows", "linux"]
categories = ["game-development"]

[dependencies]
num-traits = "0.2.19"
minifb = "0.28.0"
chen_core_fonts = { path="crates/chen_core_fonts" }

[features]
default = ["use_gui", "colored", "terminal_color_rgb"]
colored = []
styled = []
background = ["colored"]
terminal_color_cubes = []
terminal_color_rgb = []
terminal_color_legacy = []
use_gui = ["colored"]