[package]
name = "chen_core_lib"
version = "0.3.0"
edition = "2024"
description = "Assets for terminal like games."
repository = "https://github.com/antiMRS/chen-core-lib/"
authors = ["antiMRS"]
readme = "README.md"
license = "MIT"
keywords = ["gamedev", "terminal", "graphics", "windows", "linux"]
categories = ["game-development"]

[dependencies]
num-traits = "0.2.19"
minifb = {version = "0.28.0", optional = true}
chen_core_fonts = { version = "1.0.0", path = "crates/chen_core_fonts", optional = true }


[workspace]
members = ["crates/chen_core_fonts"]

[features]
default = ["colored", "terminal_color_rgb"]
colored = []
styled = []
background = ["colored"]
terminal_color_cubes = []
terminal_color_rgb = []
terminal_color_legacy = []
use_gui = ["colored", "dep:minifb", "dep:chen_core_fonts"]
